--- a/yellowjacketla/pubspec.yaml
+++ b/yellowjacketla/pubspec.yaml
@@ -37,8 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   tflite_flutter: ^0.8.0
-  location: ^4.2.0
-  permission_handler: ^8.0.1
+  # location: ^4.2.0
+  # permission_handler: ^8.0.1
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +65,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/1.jpeg
+    - assets/2.jpeg
+    - assets/3.jpeg
+    - assets/4.jpeg
+    - assets/5.jpeg
+    - assets/6.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
